[gd_scene load_steps=2 format=3 uid="uid://dmme5lj1ruujk"]

[ext_resource type="Script" path="res://Game/UI/Scripts/menu_paused.gd" id="1_pvi16"]

[node name="MenuPaused" type="Control"]
process_mode = 3
visible = false
layout_mode = 3
anchors_preset = 0
offset_right = 1280.0
offset_bottom = 720.0
scale = Vector2(0.998732, 1.00856)
script = ExtResource("1_pvi16")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = -280.355
offset_top = -34.7029
offset_right = 1719.64
offset_bottom = 685.297
color = Color(0, 0, 0, 0.482353)

[node name="PausedText" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 354.449
offset_top = 64.4483
offset_right = 2554.45
offset_bottom = 599.448
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.199746, 0.213534)
theme_override_font_sizes/normal_font_size = 200
text = "			Paused
Press \"P\" to unpause"
scroll_active = false

[node name="StrengthButton" type="Button" parent="."]
layout_mode = 0
offset_left = 92.1168
offset_top = 261.759
offset_right = 1077.12
offset_bottom = 574.759
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 100
text = "Strength"

[node name="AgilityButton" type="Button" parent="."]
layout_mode = 0
offset_left = 89.0
offset_top = 387.0
offset_right = 1146.0
offset_bottom = 696.0
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 100
text = "Agility"

[node name="AimButton" type="Button" parent="."]
layout_mode = 0
offset_left = 91.1155
offset_top = 521.536
offset_right = 1076.12
offset_bottom = 799.536
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/font_size = 100
text = "AIM"

[node name="ValuesText" type="RichTextLabel" parent="."]
layout_mode = 0
offset_left = 400.508
offset_top = 238.955
offset_right = 1437.51
offset_bottom = 1708.95
scale = Vector2(0.25, 0.25)
theme_override_font_sizes/normal_font_size = 350
text = "0
0
0"

[connection signal="pressed" from="StrengthButton" to="." method="_on_strength_button_pressed"]
[connection signal="pressed" from="AgilityButton" to="." method="_on_agility_button_pressed"]
[connection signal="pressed" from="AimButton" to="." method="_on_aim_button_pressed"]
